<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".AcercaDeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="118dp"
            app:srcCompat="@drawable/logo_tecnm" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/institucion"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campus"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carrera"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/materia"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="99dp"
            android:layout_height="118dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/itl" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/semestre"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grupo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/leyenda_alumno"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alumno_nombre"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:text="@string/derechos_reservados"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />
</LinearLayout>